# SocialCurrents

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANUAL.md  README.md  extract.py  pyproject.toml  run_all.ps1  run_batch_exhaustive_synchrony.sh  run_macos.sh  run_pipeline.py  setup_macos.sh
analysis/: correlate.py  cross_corr.py  describe.py  extract.py  group_correlate.py  group_outcome_from_synch.py  group_synch_by_states.py  group_synch_from_features.py  group_synchrony.py  link_state_outcomes.py  map_states.py  segment.py  synchronize.py  utils.py
scripts/: regenerate_synchrony_analyses.sh
test/: test_arbex_import.py  test_avhubert_import.py  test_crowdflow_import.py  test_crowdflow_run.py  test_env_sanity.py  test_mediapipe_pose.py  test_openpose_binary.py  test_openpose_run.py  test_video_io.py  test_vision_imports.py  test_vitpose_import.py  test_vitpose_run.py
